move to kotlin dsl for configuration